cloud/testk8/customerdashboard/customerdashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerdashboard
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerdashboard
      version: 'v1'
  template:
    metadata:
      labels:
        app: customerdashboard
        version: 'v1'
    spec:
      containers:
        - name: customerdashboard-app
          image: rakgenius/customerdashboard:1.1.0
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/info
              port: http
            initialDelaySeconds: 120
