cloud/testk8/customerdashboard/customerdashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customerdashboard
  namespace: jhipster
  labels:
    app: customerdashboard
spec:
  selector:
    app: customerdashboard
  type: ClusterIP
  ports:
    - name: http
      port: 8080
