cloud/testk8/customerdashboard/customerdashboard-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerdashboard-virtualservice
  namespace: jhipster
spec:
  hosts:
    - customerdashboard
  http:
    - route:
        - destination:
            host: customerdashboard
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
